--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="list-group my-5">
         <div class="row">
           <div class="list-group-item">
-            <p class="mb-0 js-heading-mask_heading is-masking">Visual</p>
+            <p class="mb-0 js-heading-mask_heading is-masking">Website Design</p>
             <div class="desc ms-auto">
               <p class="mb-0 desc">
                 I search the internet for visual references and then combine
@@ -113,29 +113,26 @@
             </div>
           </div>
           <div class="list-group-item">
-            <p class="mb-0 js-heading-mask_heading is-masking">Motion</p>
+            <p class="mb-0 js-heading-mask_heading is-masking">Graphic Design</p>
             <div class="desc">
               <p class="mb-0 desc">
-                I use fancy motion that makes my design more interesting than it
-                actually is
+                I'll focus on creating visually compelling and innovative designs tailored to your brand's unique identity.
               </p>
             </div>
           </div>
           <div class="list-group-item">
-            <p class="mb-0 js-heading-mask_heading is-masking">Product</p>
+            <p class="mb-0 js-heading-mask_heading is-masking">Mobile App Design</p>
             <div class="desc">
               <p class="mb-0 desc">
-                I utilize common design best practices, test, and re-iterate
-                until it works (hopefully).
+                I don't make only websites, also experience in crafting beautiful mobile Application
               </p>
             </div>
           </div>
           <div class="list-group-item">
-            <p class="mb-0 js-heading-mask_heading is-masking">Research</p>
+            <p class="mb-0 js-heading-mask_heading is-masking">Website Development</p>
             <div class="desc">
               <p class="mb-0 desc">
-                I'll understand the empathy of user and research them for good
-                user experience
+                I specialize in web development using HTML, CSS, and Bootstrap, and I have experience in creating CMS websites.
               </p>
             </div>
           </div>
